cleaned up html formatting and fixed css right sidebar to force all text-align to center

--- a/week1/assets/css/style.css
+++ b/week1/assets/css/style.css
@@ -112,6 +112,7 @@ p {
 .benefit-lead, .benefit-brand, .benefit-cost {
     margin-bottom: 32px;
     color: #ffffff;
+    text-align: center;
 }
 
 .benefit-lead, .benefit-brand, .benefit-cost h3 {
